fix video and burger menu

--- a/src/home.html
+++ b/src/home.html
@@ -302,5 +302,6 @@ if this could be the start of something beautiful.</p>
     </div>
   </footer>
   <script src="js/work-process.js"></script>
+  <script src="js/header.js"></script>
 </body>
 </html>
