mark 3/5 pages done

--- a/src/1_one_page.html
+++ b/src/1_one_page.html
@@ -17,13 +17,13 @@
   <link rel="stylesheet" href="css/clients.css">
   <link rel="stylesheet" href="css/need-project.css">
   <link rel="stylesheet" href="css/footer.css">
-  <title>Document</title>
+  <title>Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
   <!-- HEADER -->
-  <header class="header container">
+  <header class="header bg container">
       <div class="header__row">
         <img class="header__logo" src="img/logo.png" alt="logo">
         <div class="header__burger">
@@ -267,6 +267,7 @@ if this could be the start of something beautiful.</p>
       <input class="need-project__form-submit input__submit"  type="submit" name="submit"  value="send message">
     </form>
   </section>
+  <!-- FOOTER -->
   <footer class="footer container">
     <div class="footer__company">
       <h5>Piroll Design, Inc.</h5>
